# es-assignment

./: README.md
api/: .dockerignore  Dockerfile  env.sample  pyproject.toml
api/app/: Procfile  __init__.py  auth.py  exceptions.py  logger.py  main.py  requests.py  requirements.txt  settings.py  utils.py  views.py
api/app/.ebextensions/: 02_fastapi.config
api/app/db/: __init__.py  dynamo.py  models.py  sql.py
api/app/models/: __init__.py
api/app/routes/: __init__.py  appointments.py  auth.py  payment.py
api/openapi/: openapi.yml
api/scripts/: install_local.sh  run-dev.sh  start_dynamo.sh  start_postgres.sh
aws-resources/lambda/create_appointment/: lambda_function.py
aws-resources/state-machines/: GetAppointmentState.json  UpdateAppointmentState.json
lambda/get_user/: getUser.json
lambda/user_register/: userRegister.json
patient-app/: package-lock.json  package.json  svelte.config.js  tailwind.config.ts
patient-app/src/boot/: axios.ts
patient-app/src/components/: +footer.svelte  authenticatedHeader.svelte  basicHeader.svelte
patient-app/src/components/alerts/: Alerts.svelte  store.ts
patient-app/src/routes/: +layout.svelte  +page.svelte
patient-app/src/routes/appointments/: +page.svelte
patient-app/src/services/: appointments.ts  management.ts
resources/lambda/create_appointment/: lambda_function.py
resources/lambda/delete_appointment/: lambda_function.py
resources/lambda/get_appointments/: lambda_functions.py
resources/state-machines/: GetAppointments.json  HoldAppointment.json  ScheduleAppointment.json
(+9 files in other folders)
